--- a/index.Rmd
+++ b/index.Rmd
@@ -9,12 +9,18 @@ site: bookdown::bookdown_site
 
 ## Structure of the book
 
+This book is a work in progress. Submit any issues  [here](https://github.com/andreavillanes/R_Data_Manipulation_Techniques/issues). Please check back for frequent updates. 
+
 ## About the Author
 
 Andrea Villanes earned her PhD in Computer Science from NC State un 2019. She is also a 2009 graduate of the [MSA program](https://analytics.ncsu.edu/) and a teaching assistant professor at the Institute for Advanced Analytics.
 
 Inspired by her aunt, who earned a Ph.D. from NC State when Villanes was young, Villanes went on to complete a second master’s degree as well as a Ph.D. in computer science, deepening her knowledge of text mining, sentiment analysis, and visualization techniques. During that time she interned with Walmart, where her text mining work garnered her the Walmart Leadership Excellence Awards Scholarship. She also served a one-year term as president of NC State’s Women in Computer Science (WiCS) student organization. 
 
-While working toward her advanced degrees in computer science, Villanes served as a teaching assistant and, later, an instructor at the Institute before being named a member of the faculty in 2019. Her longtime involvement with the MSA has afforded her opportunities to contribute to the program’s continued growth and evolution over time. Her favorite part about teaching MSA students is the different backgrounds of each student, and to see each of them grow as a data scientist during the year. The students we meet in the summer rapidly mature in all aspects of their technical knowledge. They also become better presenters and communicators. They truly make us proud at the end of the year. 
+While working toward her advanced degrees in computer science, Villanes served as a teaching assistant and, later, an instructor at the Institute before being named a member of the faculty in 2019. Her longtime involvement with the MSA has afforded her opportunities to contribute to the program’s continued growth and evolution over time. Her favorite part about teaching MSA students is the different backgrounds of each student, and to see each of them grow as a data scientist during the year. 
 
 In addition to teaching, Villanes is actively involved in the broader data science community. She is the co-founder of Women in Technology Perú, which brings together women who are interested in different areas of technology, as well as the co-founder of Zunti, a new entrepreneurial venture that promotes the use of data science in companies in Latin America. 
+
+## Acknowledgements
+
+The author would like to thank the members of the faculty and the TAs at the Institute who provided feedback on this work.
