--- a/02-tears.Rmd
+++ b/02-tears.Rmd
@@ -1,2 +1,67 @@
 # Introduction to R
 
+The simplest way to use R is to use it as if it were a calculator. For example, if we want to know what one plus one is, you may type:
+
+```{r prompt=TRUE, eval=FALSE}
+1+1
+```
+
+We can use any arithmetic operator, like addition, subtraction, multiplication, division, divison, exponentiation, and modulus operations:
+
+
+```{r prompt=TRUE, eval=FALSE}
+  # addition
+  1 + 1
+  
+  # subtraction
+  6 - 4
+  
+  # multiplication 
+  2 * 2 
+  
+  # division
+  10 / 5
+  10.2 / 5
+  
+  # integer divison
+  15.2 %/% 5 
+  15.7 %/% 5
+  
+  # modulus
+  15.2 %% 5 
+  15.8 %% 5
+  
+  # exponential
+  2^3 
+  
+```
+
+R also provides numerous built-in functions to use in calculations, such as natural logs, exponentiation, square root, absolute value:
+
+```{r prompt=TRUE, eval=FALSE}
+  # natural log
+  log(10)
+  
+  # exponentiation
+  exp(2)
+  
+  # square root 
+  sqrt(4)
+  
+  # absolute value
+  abs(-4)
+  
+```
+R includes extensive facilities for accessing documentation and searching for help. This is useful to get more information about a specific function. The `help()` function and `?` help operator in R provide access to the documentation pages for R functions. For example, to get help with the round() function, we submit the following code:
+
+```{r}
+  #help() function
+  help(round)
+
+  #? operator  
+  ?round()
+```
+
+
+
+
