Changing variable name

--- a/02-tears.Rmd
+++ b/02-tears.Rmd
@@ -68,7 +68,7 @@ R includes extensive facilities for accessing documentation and searching for he
 
 A basic concept in programming is called a variable. A variable allows you to store a value (e.g. 10) or an object (e.g. a function description) in R. We can then further use the variable's name to access the value or the object that is stored within this variable.
 
-For example, you can assign a value 10 to a variable my_variable:
+For example, you can assign a value 10 to a variable `my_variable`:
 
 ```{r prompt=TRUE, eval=FALSE}
   my_variable <- 10
