--- a/02-tears.Rmd
+++ b/02-tears.Rmd
@@ -74,8 +74,49 @@ For example, you can assign a value 10 to a variable `my_variable`:
   my_variable <- 10
 ```
 
-To print out the value of the variable, you simply type the name of your variable
+To print out the value of the variable, you simply type the name of your variable:
 
 ```{r prompt=TRUE, eval=TRUE}
   my_variable
 ```
+
+A valid variable name consists of letters, numbers and the dot or underline characters. The variable name starts with a letter or the dot not followed by a number:
+
+```{r prompt=TRUE, eval=FALSE}
+  # A variable can be operated on 
+  my_variable + 1
+  
+  # And passed to a function
+  sqrt(my_variable + 1)
+  
+  # To reassign a variable, just reassign in
+  my_variable <- 3000
+
+  # You can also operate on and reassign a variable to itself 
+  my_variable <- my_variable + 1
+```
+
+## Finding Variables
+
+To know all the variables currently available in the workspace we use the `ls()` function:
+
+```{r prompt=TRUE, eval=FALSE}
+  print(ls())
+```
+
+The `ls()` function can also use patterns to match the variable names.
+
+```{r prompt=TRUE, eval=FALSE}
+  # List the variables starting with the pattern "var".
+  print(ls(pattern = "var"))   
+```
+
+## Deleting Variables
+
+Variables can be deleted by using the `rm()` function. Below we delete the variable my_variable:
+
+```{r prompt=TRUE, eval=FALSE}
+  rm(my_variable)
+```
+
+
