--- a/02-data_structures.Rmd
+++ b/02-data_structures.Rmd
@@ -83,8 +83,98 @@ Finally, a vector doesn't have to be made with consistent elements, but it will 
 
 As we mentioned earlier, the elements of a vector can only be of one type. If we want elements of different types... we will need a list.
 
-
 ## Lists
+
+Lists are objects which contain elements of different types like − numbers, strings, vectors and another list inside it. A list can also contain a matrix or a function as its elements. A list is created using list() function.
+
+```{r prompt=TRUE, eval=FALSE}
+  # Here are 3 vectors of different types
+  v1 <- c("apple", "banana")
+  v2 <- c("dog", "cat", "bunny", "pig", "cow", "horse")
+  v3 <- seq(0,10,by=2)
+  
+  v1;v2;v3
+```
+
+We can put all of these vectors into a list:
+
+```{r prompt=TRUE, eval=FALSE}
+  # Here are 3 vectors of different types
+  l1 <- list(v1, v2, v3)
+
+  class(l1)
+  typeof(l1)  
+```
+
+List elements can be accessed via index. Each of the components of a list is accessed via the double bracket [[x]] syntax:
+
+```{r prompt=TRUE, eval=FALSE}
+  # First element in the list
+  l1[[1]]
+  
+  # First element in the first element (vector) of the list
+  l1[[1]][1]
+```
+
+List elements can be named:
+
+```{r prompt=TRUE, eval=FALSE}
+  names(l1) <- c("Fruit", "Animals", "Even_Numbers")
+```
+
+Or they can be named upon creating the list:
+
+```{r prompt=TRUE, eval=FALSE}
+  l1 <- list(Fruit=v1, Animals=v2, Even_Numbers=v3)
+```
+
+The elements in a list can be retrieved by name:
+
+```{r prompt=TRUE, eval=FALSE}
+  l1$Fruit
+  l1$Fruit[1]
+  
+  l1$Even_Numbers
+  max(l1$Even_Numbers)
+```
+
+A list can even contain lists:
+
+```{r prompt=TRUE, eval=FALSE}
+  l2 <- list(Odd_Numbers=seq(1,10,by=2), list1=l1)
+
+  # First Vector
+  l2$Odd_Numbers
+  l2[[1]]
+  
+  # l1 within L2
+  l2$list1
+  l2[[2]]
+  
+  l2$list1$Fruit
+  l2[[2]][1]
+  
+  l2$list1$Fruit[1]
+  l2[[2]][[1]][1]
+  
+  l2[[2]][[1]][3] <- "blueberry"
+  l2$list1$Fruit
+  l2
+```
+
+To combine lists:
+
+```{r prompt=TRUE, eval=FALSE}
+  l4 <- list(More_Fruit=c("melon", "orange"))
+  l1 <- c(l1,l4)
+```
+
+Finally, if we want to update part of a list, we can just operate on and update it accordingly:
+
+```{r prompt=TRUE, eval=FALSE}
+  l1$Fruit <- c(l1$Fruit, l4$More_Fruit)
+  l1$Fruit
+```
 
 ## Arrays
 
