--- a/03-programming_fundamentals.Rmd
+++ b/03-programming_fundamentals.Rmd
@@ -1,1 +1,91 @@
 # Programming Fundamentals
+
+## Logicals
+
+A logical is a binary representation of True and False:
+
+```{r prompt=TRUE, eval=FALSE}
+  a <- TRUE
+  
+  b <- FALSE
+  
+  typeof(b)
+```
+
+Logicals are used for evaluating comparisons, such as:
+
+```{r prompt=TRUE, eval=FALSE}
+  #equality
+  # note the double equals == operator is a logical comparison, opposed to a single equal = being an assignment 
+    
+  2==2
+  typeof(2==2)
+    
+  'cat' == 'dog'
+    
+  'cat' == 'cat'
+    
+  #Not equal operator 
+  2!=2 
+  
+  # greater than/less than
+  2>2
+  
+  2>=2
+    
+  2<1
+    
+  2<=1
+    
+  # Null Values 
+  V1 <- 1
+  V1[10] <- 10
+    
+  is.na(V1)
+  !is.na(V1)
+    
+  # Contained within set 
+  V1
+    
+  1 %in% V1
+  10 %in% V1
+  2 %in% V1
+  
+    
+  c(1,2) %in% V1
+    
+  # If we want not in, then use the not ! operator around the entire statement 
+  !(1 %in% V1)
+    
+  # Note, logicals can be used with other data types as well
+  a <- c(1,2,3,4,5) 
+  a <= 1
+    
+  b <- c(1,2,7,9,5)
+  a == b
+  a != b
+    
+  A <- matrix(1:10,2,5)
+  B <- matrix(seq(1,20,2),2,5)
+    
+  A == B
+  A != B
+    
+  identical(a,b)
+  identical(A,B)
+    
+  all.equal(A,B)
+```
+
+
+## Conditionals
+
+## Functions
+
+## Loops
+
+## Vectorization
+
+```{r prompt=TRUE, eval=FALSE}
+
+```
