--- a/05-resources.Rmd
+++ b/05-resources.Rmd
@@ -14,6 +14,10 @@ Here is a list of resources that might help you in your R journey:
 
 * [Google's R Style Guide](https://google.github.io/styleguide/Rguide.html) 
 
+## Other resources
+
+* [R Graph Gallery](https://www.r-graph-gallery.com/) 
+
 ## Books
 
 * [R for Data Science](https://r4ds.had.co.nz/)
