--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -4,14 +4,14 @@
 
 The simplest way to use R is to use it as if it were a calculator. For example, if we want to know what one plus one is, you may type:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   1 + 1
 ```
 
 We can use any arithmetic operator, like addition, subtraction, multiplication, division, divison, exponentiation, and modulus operations:
 
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   # addition
   1 + 1
   
@@ -40,7 +40,7 @@ We can use any arithmetic operator, like addition, subtraction, multiplication, 
 
 R also provides numerous built-in functions to use in calculations, such as natural logs, exponentiation, square root, absolute value:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   # natural log
   log(10)
   
@@ -56,7 +56,7 @@ R also provides numerous built-in functions to use in calculations, such as natu
 ```
 R includes extensive facilities for accessing documentation and searching for help. This is useful to get more information about a specific function. The `help()` function and `?` help operator in R provide access to the documentation pages for R functions. For example, to get help with the round() function, we submit the following code:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   #help() function
   help(round)
 
@@ -70,19 +70,19 @@ A basic concept in programming is called a variable. A variable allows you to st
 
 For example, you can assign a value 10 to a variable `my_variable`:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   my_variable <- 10
 ```
 
 To print out the value of the variable, you simply type the name of your variable:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   my_variable
 ```
 
 A valid variable name consists of letters, numbers and the dot or underline characters. The variable name starts with a letter or the dot not followed by a number:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   # A variable can be operated on 
   my_variable + 1
   
@@ -98,7 +98,7 @@ A valid variable name consists of letters, numbers and the dot or underline char
 
 You can broaden assignments beyond numbers:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   result <- sqrt(9)
   
   fruit_1 <- "apple"
@@ -111,13 +111,13 @@ You can broaden assignments beyond numbers:
 
 To know all the variables currently available in the workspace we use the `ls()` function:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   print(ls())
 ```
 
 The `ls()` function can also use patterns to match the variable names.
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   # List the variables starting with the pattern "var".
   print(ls(pattern = "var"))   
 ```
@@ -126,14 +126,14 @@ The `ls()` function can also use patterns to match the variable names.
 
 Variables can be deleted by using the `rm()` function. Below we delete the variable my_variable:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   my_variable <- 5
   rm(my_variable)
 ```
 
 All the variables can be deleted by using the `rm()` and `ls()` function together:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   rm(list = ls())
 ```
 
